--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
 <body>
 
     <nav class="topbar">
-        <a href="dashboard.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#about">About</a>
         <a href="contact.html">Contact</a>
     </nav>
