--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 
     <!-- Navbar -->
     <nav class="topbar">
-        <a href="dashboard.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html#contact-section">Contact</a>
     </nav>
