--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 </head>
 <body>
     <nav class="topbar">
-        <a href="dashboard.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html#contact-section">Contact</a>
        
