--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 </head>
 <body>
     <nav class="topbar">
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html#contact-section">Contact</a>
        
