--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
 <body>
 
     <nav class="topbar">
-       <a href="/">Home</a>
+      <a href="/index.html">Home</a>
 <a href="/about.html">About</a>
 <a href="/contact.html#contact-section">Contact</a>
 
