--- a/about.html
+++ b/about.html
@@ -140,10 +140,9 @@
 <body>
 
     <nav class="topbar">
-      <a href="/index.html">Home</a>
-<a href="/about.html">About</a>
-<a href="/contact.html#contact-section">Contact</a>
-
+        <a href="dashboard.html">Home</a>
+        <a href="#about">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <div class="container">
