--- a/contact.html
+++ b/contact.html
@@ -105,9 +105,9 @@
 
     <!-- Navbar -->
     <nav class="topbar">
-     <a href="/">Home</a>
-<a href="/about.html">About</a>
-<a href="/contact.html#contact-section">Contact</a>
+        <a href="dashboard.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html#contact-section">Contact</a>
     </nav>
 
     <!-- Contact Form -->
